charts/myntplayer-frontend.yaml

apiVersion: v1
kind: Service
metadata:
  name: myntplayer-frontend
  labels:
    type: myntplayer-frontend
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    type: myntplayer-frontend

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myntplayer-frontend
  labels:
    type: myntplayer-frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "100%"
  minReadySeconds: 10
  revisionHistoryLimit: 1
  replicas: 2
  template:
    metadata:
      labels:
        type: myntplayer-frontend
    spec: 
      containers:
        - name: frontend
          image: maktouch/myntplayer:3.0.0
          command: "yarn frontend start"
          resources:
            requests:
              cpu: 100m
              memory: 32Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            failureThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
            failureThreshold: 1
