charts/myntplayer-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myntplayer
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: myntplayer.maktouch.com
      http:
        paths:
        - path: /
          backend: 
            serviceName: myntplayer-frontend
            servicePort: 3000
        - path: /api
          backend: 
            serviceName: myntplayer-backend
            servicePort: 9305
        - path: /socket.io
          backend: 
            serviceName: myntplayer-backend
            servicePort: 9305
